[gd_scene load_steps=20 format=3 uid="uid://b4h6t67vdweal"]

[ext_resource type="Script" uid="uid://c5o062sucu70d" path="res://scripts/cooking/tofu_stand/tofu_stand.gd" id="1_sqs2g"]
[ext_resource type="Texture2D" uid="uid://bjenthgy3qsr1" path="res://assets/sprites/cooking/background_2.png" id="2_akwb2"]
[ext_resource type="PackedScene" uid="uid://bg1dy0qdj3pif" path="res://scenes/cooking/ingredient.tscn" id="3_bqfwf"]
[ext_resource type="Texture2D" uid="uid://b8c3vtsncg7ho" path="res://assets/sprites/cooking/tofu_stand/rice_rolls.png" id="3_r85b3"]
[ext_resource type="Texture2D" uid="uid://dp1fgsrgx7umc" path="res://assets/sprites/cooking/tofu_stand/chilly.png" id="4_bqfwf"]
[ext_resource type="Texture2D" uid="uid://ch681sc0sfs86" path="res://assets/sprites/cooking/tofu_stand/plastic_bg.png" id="6_ndbs7"]
[ext_resource type="Texture2D" uid="uid://dgg82q4153pxf" path="res://assets/sprites/cooking/tofu_stand/rice_rolls_preview.png" id="7_qk4mc"]
[ext_resource type="Texture2D" uid="uid://drxt3dpgjdfor" path="res://assets/sprites/cooking/tofu_stand/tofu_preview.png" id="8_akwb2"]
[ext_resource type="Texture2D" uid="uid://cya2o8hl4pxvq" path="res://assets/sprites/cooking/tofu_stand/chilly_preview.png" id="9_8ayv2"]
[ext_resource type="Texture2D" uid="uid://diy4y1xbg86oa" path="res://assets/sprites/cooking/tofu_stand/plastic_line.png" id="9_yg0of"]
[ext_resource type="Texture2D" uid="uid://ddi4rd6hvk4ta" path="res://assets/sprites/cooking/tofu_stand/platic_top.png" id="10_8ayv2"]
[ext_resource type="Texture2D" uid="uid://bo0w33qohd542" path="res://assets/sprites/cooking/mouse_custom.png" id="12_akwb2"]
[ext_resource type="PackedScene" uid="uid://doo13f5dqeox0" path="res://scenes/cooking/food_finished.tscn" id="12_yg0of"]

[sub_resource type="Animation" id="Animation_yg0of"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_akwb2"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.633333, 0.866667),
"transitions": PackedFloat32Array(0.366022, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.835, 1.13), Vector2(1.16, 0.920001), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ayv2"]
_data = {
&"RESET": SubResource("Animation_yg0of"),
&"new_animation": SubResource("Animation_akwb2")
}

[sub_resource type="Animation" id="Animation_si0af"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_085kx"]
resource_name = "new_animation"
length = 1.4095
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.6, 1.06667),
"transitions": PackedFloat32Array(0.378929, 1, 0.307786, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.024, 1.049), Vector2(1.085, 0.83), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jopvl"]
_data = {
&"RESET": SubResource("Animation_si0af"),
&"new_animation": SubResource("Animation_085kx")
}

[node name="TofuStand" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqs2g")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_akwb2")

[node name="tofu" parent="." instance=ExtResource("3_bqfwf")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 326.0
offset_top = 121.0
offset_right = 387.0
offset_bottom = 171.0

[node name="rice_roll" parent="." instance=ExtResource("3_bqfwf")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 403.0
offset_top = 121.0
offset_right = 436.0
offset_bottom = 224.0
texture = ExtResource("3_r85b3")

[node name="chilly" parent="." instance=ExtResource("3_bqfwf")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 336.0
offset_top = 183.0
offset_right = 363.0
offset_bottom = 226.0
texture = ExtResource("4_bqfwf")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(93, 136)
anchors_preset = 0
offset_left = 202.0
offset_top = 98.0
offset_right = 295.0
offset_bottom = 234.0

[node name="TextureRect3" type="TextureRect" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.180392)
layout_mode = 0
offset_right = 93.0
offset_bottom = 136.0
texture = ExtResource("6_ndbs7")

[node name="tofu" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 45.0
offset_bottom = 115.0

[node name="rice_roll" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = -73.0
offset_right = 83.0
offset_bottom = 56.0
pivot_offset = Vector2(19.5, 129)
texture = ExtResource("7_qk4mc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/rice_roll"]
libraries = {
&"": SubResource("AnimationLibrary_8ayv2")
}
speed_scale = 2.5

[node name="TextureRect" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_top = -1.0
offset_right = 42.0
offset_bottom = 54.0
pivot_offset = Vector2(21, 55)
texture = ExtResource("8_akwb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/TextureRect"]
libraries = {
&"": SubResource("AnimationLibrary_jopvl")
}
speed_scale = 2.582

[node name="TextureRect2" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_top = -32.0
offset_right = 42.0
offset_bottom = 23.0
pivot_offset = Vector2(21, 55)
texture = ExtResource("8_akwb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/TextureRect2"]
libraries = {
&"": SubResource("AnimationLibrary_jopvl")
}
speed_scale = 2.582

[node name="TextureRect3" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_top = -63.0
offset_right = 42.0
offset_bottom = -8.0
pivot_offset = Vector2(21, 55)
texture = ExtResource("8_akwb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/TextureRect3"]
libraries = {
&"": SubResource("AnimationLibrary_jopvl")
}
speed_scale = 2.582

[node name="TextureRect4" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = -1.0
offset_right = 83.0
offset_bottom = 54.0
pivot_offset = Vector2(21, 55)
texture = ExtResource("8_akwb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/TextureRect4"]
libraries = {
&"": SubResource("AnimationLibrary_jopvl")
}
speed_scale = 2.582

[node name="TextureRect5" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = -32.0
offset_right = 83.0
offset_bottom = 23.0
pivot_offset = Vector2(21, 55)
texture = ExtResource("8_akwb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/TextureRect5"]
libraries = {
&"": SubResource("AnimationLibrary_jopvl")
}
speed_scale = 2.582

[node name="TextureRect6" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = -63.0
offset_right = 83.0
offset_bottom = -8.0
pivot_offset = Vector2(21, 55)
texture = ExtResource("8_akwb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/tofu/TextureRect6"]
libraries = {
&"": SubResource("AnimationLibrary_jopvl")
}
speed_scale = 2.582

[node name="chilly" type="TextureRect" parent="Control/tofu"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 29.0
offset_right = 67.0
offset_bottom = 59.0
pivot_offset = Vector2(24, 30)
texture = ExtResource("9_8ayv2")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control/tofu/chilly"]
libraries = {
&"": SubResource("AnimationLibrary_8ayv2")
}
speed_scale = 2.5

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 93.0
offset_bottom = 136.0
texture = ExtResource("9_yg0of")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 93.0
offset_bottom = 136.0
texture = ExtResource("10_8ayv2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]

[node name="mouse" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 182.0
offset_right = 452.0
offset_bottom = 195.0
mouse_filter = 2
texture = ExtResource("12_akwb2")

[node name="FoodFinished" parent="." instance=ExtResource("12_yg0of")]
layout_mode = 1
